WC: Fix Read More Styling Issue If Simple Product Part 2

--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -230,6 +230,7 @@
 
 					.add_to_cart_button,
 					.product-quick-view-button,
+					.product_type_simple,
 					.product_type_grouped,
 					.product_type_variable,
 					.product_type_external {
@@ -248,6 +249,7 @@
 
 				.add_to_cart_button,
 				.product-quick-view-button,
+				.product_type_simple,
 				.product_type_grouped,
 				.product_type_variable,
 				.product_type_external {
@@ -263,6 +265,7 @@
 				}
 
 				.add_to_cart_button,
+				.product_type_simple,
 				.product_type_grouped,
 				.product_type_variable,
 				.product_type_external {
